Fix letter spacing

--- a/styles.css
+++ b/styles.css
@@ -142,13 +142,13 @@ form label {
   text-transform: uppercase;
   font-size: 0.7rem;
   font-weight: 600;
-  letter-spacing: 0.18rem;
+  letter-spacing: 0.12rem;
 }
 
 label .optional {
   font-size: 0.6rem;
   font-weight: normal;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.08rem;
 }
 
 form input {
